--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
 
     window.onload = () => {
       // set initial active class on load
-      let splitUrl = location.href.split('#');     
+      let splitUrl = location.href.split('#');
       if (splitUrl.length > 1) {
         activeLink = splitUrl.pop().toLowerCase() + "Link";
       }
@@ -67,9 +67,54 @@
   <main>
     <!-- home -->
     <section id="home">
-      <article>
-        <h1>Meeting your personal and small business website needs</h1>
-      </article>
+      <h2>Meeting your personal and small business website needs</h2>
+      <div id="myCarouselCaptions" class="carousel slide" data-bs-ride="carousel">
+        <div class="carousel-indicators">
+          <button type="button" data-bs-target="#myCarouselCaptions" data-bs-slide-to="0" class="active"
+            aria-current="true" aria-label="Slide 1"></button>
+          <button type="button" data-bs-target="#myCarouselCaptions" data-bs-slide-to="1" aria-label="Slide 2"></button>
+          <button type="button" data-bs-target="#myCarouselCaptions" data-bs-slide-to="2" aria-label="Slide 3"></button>
+          <button type="button" data-bs-target="#myCarouselCaptions" data-bs-slide-to="3" aria-label="Slide 4"></button>
+        </div>
+        <div class="carousel-inner">
+          <div class="carousel-item active">
+            <img src="images/whisky-list.jpg" class="d-block mx-auto w-100" alt="Whisky List">
+            <div class="carousel-caption d-none d-md-block">
+              <h5>Whisky List</h5>
+              <p>A handy web app to track your favorite Whiskies</p>
+            </div>
+          </div>
+          <div class="carousel-item">
+            <img src="images/la-renaissance.jpg" class="d-block mx-auto w-100" alt="La Renaissance Jewelry">
+            <div class="carousel-caption d-none d-md-block">
+              <h5>La Renaissance Jewelry</h5>
+              <p>A redesign of La Renaissance Jewelry's website</p>
+            </div>
+          </div>
+          <div class="carousel-item">
+            <img src="images/kangaero.jpg" class="d-block mx-auto w-100" alt="Kangaero">
+            <div class="carousel-caption d-none d-md-block">
+              <h5>Kangaero</h5>
+              <p>A flashcard web app to aid in learning Japanese</p>
+            </div>
+          </div>
+          <div class="carousel-item">
+            <img src="images/cop-utils.jpg" class="d-block mx-auto w-100" alt="Cop Utils">
+            <div class="carousel-caption d-none d-md-block">
+              <h5>Cop Utils</h5>
+              <p>Quick reference tools for patrol officers</p>
+            </div>
+          </div>
+        </div>
+        <button class="carousel-control-prev" type="button" data-bs-target="#myCarouselCaptions" data-bs-slide="prev">
+          <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+          <span class="visually-hidden">Previous</span>
+        </button>
+        <button class="carousel-control-next" type="button" data-bs-target="#myCarouselCaptions" data-bs-slide="next">
+          <span class="carousel-control-next-icon" aria-hidden="true"></span>
+          <span class="visually-hidden">Next</span>
+        </button>
+      </div>
     </section>
 
     <!-- about -->
