--- a/index.html
+++ b/index.html
@@ -6,9 +6,17 @@
   <!-- makes website responsive -->
   <meta name="viewport" content="width=device-width, initial-scale=1">
 
+  <!-- bootstrap.css -->
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.1/dist/css/bootstrap.min.css" rel="stylesheet"
     integrity="sha384-F3w7mX95PdgyTmZZMECAngseQB83DfGTowi0iMjiWaeVhAn4FJkqJByhZMI3AhiU" crossorigin="anonymous">
+
+  <!-- custom styles -->
   <link href="styles.css" rel="stylesheet" type="text/css">
+
+  <!-- bootstrap.js -->
+  <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.1/dist/js/bootstrap.bundle.min.js"
+    integrity="sha384-/bQdsTh/da6pkI1MST/rWKFNjaCP5gBSY4sEBT38Q/9RBh9AH40zEOg7Hlq2THRZ"
+    crossorigin="anonymous"></script>
 
   <title>Cameron Burwell</title>
 
@@ -68,7 +76,7 @@
     <!-- home -->
     <section id="home">
       <h2>Meeting your personal and small business website needs</h2>
-      <div id="myCarouselCaptions" class="carousel slide" data-bs-ride="carousel">
+      <div id="myCarouselCaptions" class="carousel slide carousel" data-interval="false"> <!--data-bs-ride="carousel">-->
         <div class="carousel-indicators">
           <button type="button" data-bs-target="#myCarouselCaptions" data-bs-slide-to="0" class="active"
             aria-current="true" aria-label="Slide 1"></button>
