--- a/index.html
+++ b/index.html
@@ -76,7 +76,7 @@
     <!-- home -->
     <section id="home">
       <h2>Meeting your personal and small business website needs</h2>
-      <div id="myCarouselCaptions" class="carousel slide carousel" data-interval="false"> <!--data-bs-ride="carousel">-->
+      <div id="myCarouselCaptions" class="carousel slide carousel" data-bs-pause="hover" data-bs-ride="carousel">
         <div class="carousel-indicators">
           <button type="button" data-bs-target="#myCarouselCaptions" data-bs-slide-to="0" class="active"
             aria-current="true" aria-label="Slide 1"></button>
