working on fake terminal styling for about

--- a/index.html
+++ b/index.html
@@ -10,6 +10,11 @@
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.1/dist/css/bootstrap.min.css" rel="stylesheet"
     integrity="sha384-F3w7mX95PdgyTmZZMECAngseQB83DfGTowi0iMjiWaeVhAn4FJkqJByhZMI3AhiU" crossorigin="anonymous">
 
+  <!-- fontawesome -->
+  <link href="/icons/fontawesome-free-5.15.4-web/css/solid.min.css" rel="stylesheet">
+  <link rel="stylesheet" href="/icons/fontawesome-free-5.15.4-web/css/fontawesome.min.css">
+  <link rel="stylesheet" href="/icons/fontawesome-free-5.15.4-web/css/regular.min.css">
+
   <!-- custom styles -->
   <link href="styles.css" rel="stylesheet" type="text/css">
 
@@ -127,8 +132,13 @@
 
     <!-- about -->
     <section id="about" class="row">
-      <article class="col">
-        <h1>Cameron is...</h1>
+      <article class="col term-emu">
+        <h1 class="window-header">
+          <i class="fas fa-times-circle mock-close-button"></i>
+          <i class="far fa-window-minimize"></i>
+          <i class="far fa-square"></i>
+          Cameron is...
+        </h1>
         <ul>
           <li>(Frontend | Backend | Cyber Security | Test ) + Engineer</li>
           <li>Website + (Designer && Developer)</li>
@@ -137,7 +147,7 @@
           <li>Motorcycle rider</li>
         </ul>
       </article>
-      <article class="col">
+      <article class="col term-emu">
         <h1>Cameron knows...</h1>
         <ul>
           <li>Javascript && HTML && CSS</li>
