styled terminal and picture, adding text to window headers

--- a/index.html
+++ b/index.html
@@ -10,11 +10,6 @@
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.1/dist/css/bootstrap.min.css" rel="stylesheet"
     integrity="sha384-F3w7mX95PdgyTmZZMECAngseQB83DfGTowi0iMjiWaeVhAn4FJkqJByhZMI3AhiU" crossorigin="anonymous">
 
-  <!-- fontawesome -->
-  <link href="/icons/fontawesome-free-5.15.4-web/css/solid.min.css" rel="stylesheet">
-  <link rel="stylesheet" href="/icons/fontawesome-free-5.15.4-web/css/fontawesome.min.css">
-  <link rel="stylesheet" href="/icons/fontawesome-free-5.15.4-web/css/regular.min.css">
-
   <!-- custom styles -->
   <link href="styles.css" rel="stylesheet" type="text/css">
 
@@ -133,27 +128,38 @@
     <!-- about -->
     <section id="about" class="row">
       <article class="col term-emu">
-        <h1 class="window-header">
-          <i class="fas fa-times-circle mock-close-button"></i>
-          <i class="far fa-window-minimize"></i>
-          <i class="far fa-square"></i>
-          Cameron is...
-        </h1>
-        <ul>
-          <li>(Frontend | Backend | Cyber Security | Test ) + Engineer</li>
-          <li>Website + (Designer && Developer)</li>
-          <li>Coffee lover</li>
-          <li>Musician</li>
-          <li>Motorcycle rider</li>
-        </ul>
+        <div class="window-header">
+          <span class="red-dot"></span>
+          <span class="yellow-dot"></span>
+          <span class="green-dot"></span>
+        </div>
+        <div>
+          <span class="term-text">cameron@burwell:~$ get info</span><br />
+          <span class="term-text">(Frontend | Backend | Cyber Security | Test ) + Engineer</span><br />
+          <span class="term-text">Website + (Designer && Developer)</span><br />
+          <span class="term-text">Coffee lover</span><br />
+          <span class="term-text">Music maker && Guitar player</span><br />
+          <span class="term-text">Motorcycle rider</span><br />
+          <span class="term-text">cameron@burwell:~$ </span><br />
+          <span class="term-text">cameron@burwell:~$ </span><br />
+          <span class="term-text">cameron@burwell:~$ </span><br />
+          <span class="term-text">cameron@burwell:~$ get skills</span><br />
+          <span class="term-text">Javascript && HTML && CSS</span><br />
+          <span class="term-text">Angular | React | ASP.NET | Spring</span><br />
+          <span class="term-text">C# | Java</span><br />
+          <span class="term-text">cameron@burwell:~$ open cameron-burwell.jpg &</span><br />
+          <span class="term-text">cameron@burwell:~$ <span class="blink">_</span></span>
+        </div>
       </article>
       <article class="col term-emu">
-        <h1>Cameron knows...</h1>
-        <ul>
-          <li>Javascript && HTML && CSS</li>
-          <li>Angular | React | ASP.NET | Spring</li>
-          <li>C# | Java</li>
-        </ul>
+        <div class="window-header">
+          <span class="red-dot"></span>
+          <span class="yellow-dot"></span>
+          <span class="green-dot"></span>
+        </div>
+        <div class="term-pic">
+          <img src="images/cameron-burwell.jpg" class="img-fluid" alt="Cameron Burwell">
+        </div>
       </article>
     </section>
 
