--- a/index.html
+++ b/index.html
@@ -129,13 +129,14 @@
     <section id="about" class="row">
       <article class="col term-emu">
         <div class="window-header">
-          <span class="red-dot"></span>
-          <span class="yellow-dot"></span>
-          <span class="green-dot"></span>
+          <div class="red-dot"></div>
+          <div class="yellow-dot"></div>
+          <div class="green-dot"></div>
+          <span class="center">Terminal</span>
         </div>
         <div>
           <span class="term-text">cameron@burwell:~$ get info</span><br />
-          <span class="term-text">(Frontend | Backend | Cyber Security | Test ) + Engineer</span><br />
+          <span class="term-text">(Frontend | Backend | Cyber Security ) + Engineer</span><br />
           <span class="term-text">Website + (Designer && Developer)</span><br />
           <span class="term-text">Coffee lover</span><br />
           <span class="term-text">Music maker && Guitar player</span><br />
@@ -156,6 +157,7 @@
           <span class="red-dot"></span>
           <span class="yellow-dot"></span>
           <span class="green-dot"></span>
+          <span class="center">cameron-burwell.jpg</span>
         </div>
         <div class="term-pic">
           <img src="images/cameron-burwell.jpg" class="img-fluid" alt="Cameron Burwell">
