--- a/index.html
+++ b/index.html
@@ -167,7 +167,31 @@
 
     <!-- contact -->
     <section id="contact">
-      <p>Welcome to Cameron's contact section!</p>
+      <h2>Contact me</h2>
+      <p>I look forward to hearing from you :)</p>
+      <form class="form-floating">
+        <div class="form-floating mb-3">
+          <input type="text" class="form-control" placeholder="Name">
+          <label for="floatingInput">Name</label>
+        </div>
+        <div class="form-floating mb-3">
+          <input type="email" class="form-control" placeholder="name@example.com">
+          <label for="floatingInput">Email address</label>
+        </div>
+        <div class="form-floating mb-3">
+          <input type="text" class="form-control" placeholder="Subject">
+          <label for="floatingInput">Subject</label>
+        </div>
+        <div class="form-floating mb-3">
+          <textarea class="form-control" placeholder="Your message" style="height: 30vh"></textarea>
+          <label for="floatingTextarea2">Your message</label>
+        </div>
+      </form>
+      <div class="socials">
+        <link rel="icon" type="image/png" href="/favicon.png"/>
+        <link rel="icon" type="image/png" href="/favicon.png"/>
+        <link rel="icon" type="image/png" href="/favicon.png"/>
+      </div>
     </section>
   </main>
 </body>
