--- a/index.html
+++ b/index.html
@@ -9,6 +9,7 @@
   <!-- bootstrap.css -->
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.1/dist/css/bootstrap.min.css" rel="stylesheet"
     integrity="sha384-F3w7mX95PdgyTmZZMECAngseQB83DfGTowi0iMjiWaeVhAn4FJkqJByhZMI3AhiU" crossorigin="anonymous">
+  <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.5.0/font/bootstrap-icons.css">
 
   <!-- custom styles -->
   <link href="styles.css" rel="stylesheet" type="text/css">
@@ -169,7 +170,7 @@
     <section id="contact">
       <h2>Contact me</h2>
       <p>I look forward to hearing from you :)</p>
-      <form class="form-floating">
+      <form class="form-floating email-form">
         <div class="form-floating mb-3">
           <input type="text" class="form-control" placeholder="Name">
           <label for="floatingInput">Name</label>
@@ -183,14 +184,23 @@
           <label for="floatingInput">Subject</label>
         </div>
         <div class="form-floating mb-3">
-          <textarea class="form-control" placeholder="Your message" style="height: 30vh"></textarea>
+          <textarea class="form-control" placeholder="Your message" style="height: 25vh"></textarea>
           <label for="floatingTextarea2">Your message</label>
+        </div>
+        <div class="form-floating mb-3">
+          <button type="button" class="btn btn-light btn-lg">Submit</button>
         </div>
       </form>
       <div class="socials">
-        <link rel="icon" type="image/png" href="/favicon.png"/>
-        <link rel="icon" type="image/png" href="/favicon.png"/>
-        <link rel="icon" type="image/png" href="/favicon.png"/>
+        <a href="https://www.linkedin.com/in/cameron-burwell-13242a54/" target="_blank"><i class="bi bi-linkedin"
+            style="color: #0072B1"></i></a>
+        <a href="https://github.com/fiveohh" target="_blank"><i class="bi bi-github" style="color: white"></i></a>
+        <a href="https://www.facebook.com/cameron.burwell.94/" target="_blank"><i class="bi bi-facebook"
+            style="color: #3B5998"></i></a>
+        <a href="https://www.reddit.com/user/BLUUUEink/" target="_blank"><i class="bi bi-reddit"
+            style="color: #FF4500"></i></a>
+        <a href="https://twitter.com/BLUUUEinkk" target="_blank"><i class="bi bi-twitter"
+            style="color: #1DA1F2"></i></a>
       </div>
     </section>
   </main>
