added netlify for real

--- a/index.html
+++ b/index.html
@@ -178,7 +178,7 @@
     <section id="contact">
       <h2>Contact me</h2>
       <p>I look forward to hearing from you :)</p>
-      <form id="contactForm" class="form-floating email-form" method="POST">
+      <form id="contactForm" class="form-floating email-form" method="POST" netlify>
         <div class="form-floating mb-3">
           <input id="name" type="text" class="form-control" placeholder="Name">
           <label for="floatingInput">Name</label>
