added names for forms

--- a/index.html
+++ b/index.html
@@ -184,15 +184,15 @@
           <label for="floatingInput">Name</label>
         </div>
         <div class="form-floating mb-3">
-          <input id="email" type="email" class="form-control" placeholder="name@example.com">
+          <input id="email" name="email" type="email" class="form-control" placeholder="name@example.com">
           <label for="floatingInput">Email address</label>
         </div>
         <div class="form-floating mb-3">
-          <input id="subject" type="text" class="form-control" placeholder="Subject">
+          <input id="subject" name="subject" type="text" class="form-control" placeholder="Subject">
           <label for="floatingInput">Subject</label>
         </div>
         <div class="form-floating mb-3">
-          <textarea id="message" class="form-control" placeholder="Your message" style="height: 25vh"></textarea>
+          <textarea id="message" name="message" class="form-control" placeholder="Your message" style="height: 25vh"></textarea>
           <label for="floatingTextarea2">Your message</label>
         </div>
         <div class="form-floating mb-3">
