--- a/index.html
+++ b/index.html
@@ -178,9 +178,9 @@
     <section id="contact">
       <h2>Contact me</h2>
       <p>I look forward to hearing from you :)</p>
-      <form id="contactForm" class="form-floating email-form" method="POST" netlify>
+      <form id="contactForm" class="form-floating email-form" method="POST" data-netlify="true">
         <div class="form-floating mb-3">
-          <input id="name" type="text" class="form-control" placeholder="Name">
+          <input id="name" name="name" type="text" class="form-control" placeholder="Name">
           <label for="floatingInput">Name</label>
         </div>
         <div class="form-floating mb-3">
