added scroll snapping, working on changing active section

--- a/index.html
+++ b/index.html
@@ -82,143 +82,147 @@
 
   <!-- main content -->
   <main>
-    <!-- home -->
-    <section id="home" class="row">
-      <article class="col term-emu">
-        <div class="window-header">
-          <div class="red-dot"></div>
-          <div class="yellow-dot"></div>
-          <div class="green-dot"></div>
-          <span class="center">Terminal</span>
+    <article class="scroller">
+      <!-- home -->
+      <section id="home" class="row">
+        <div class="col term-emu">
+          <div class="window-header">
+            <div class="red-dot"></div>
+            <div class="yellow-dot"></div>
+            <div class="green-dot"></div>
+            <span class="center">Terminal</span>
+          </div>
+          <div>
+            <span class="term-text">cameron@burwell:~$ get info</span><br />
+            <span class="term-text">(Frontend | Backend | Cyber Security ) + Engineer</span><br />
+            <span class="term-text">Website + (Designer && Developer)</span><br />
+            <span class="term-text">Coffee lover</span><br />
+            <span class="term-text">Music maker && Guitar player</span><br />
+            <span class="term-text">Motorcycle rider</span><br />
+            <span class="term-text">cameron@burwell:~$ </span><br />
+            <span class="term-text">cameron@burwell:~$ </span><br />
+            <span class="term-text">cameron@burwell:~$ </span><br />
+            <span class="term-text">cameron@burwell:~$ get skills</span><br />
+            <span class="term-text">Javascript && HTML && CSS</span><br />
+            <span class="term-text">Angular | React | ASP.NET | Spring</span><br />
+            <span class="term-text">C# | Java</span><br />
+            <span class="term-text">cameron@burwell:~$ open cameron-burwell.jpg &</span><br />
+            <span class="term-text">cameron@burwell:~$ <span class="blink">_</span></span>
+          </div>
         </div>
-        <div>
-          <span class="term-text">cameron@burwell:~$ get info</span><br />
-          <span class="term-text">(Frontend | Backend | Cyber Security ) + Engineer</span><br />
-          <span class="term-text">Website + (Designer && Developer)</span><br />
-          <span class="term-text">Coffee lover</span><br />
-          <span class="term-text">Music maker && Guitar player</span><br />
-          <span class="term-text">Motorcycle rider</span><br />
-          <span class="term-text">cameron@burwell:~$ </span><br />
-          <span class="term-text">cameron@burwell:~$ </span><br />
-          <span class="term-text">cameron@burwell:~$ </span><br />
-          <span class="term-text">cameron@burwell:~$ get skills</span><br />
-          <span class="term-text">Javascript && HTML && CSS</span><br />
-          <span class="term-text">Angular | React | ASP.NET | Spring</span><br />
-          <span class="term-text">C# | Java</span><br />
-          <span class="term-text">cameron@burwell:~$ open cameron-burwell.jpg &</span><br />
-          <span class="term-text">cameron@burwell:~$ <span class="blink">_</span></span>
+        <div class="col term-emu">
+          <div class="window-header">
+            <span class="red-dot"></span>
+            <span class="yellow-dot"></span>
+            <span class="green-dot"></span>
+            <span class="center">cameron-burwell.jpg</span>
+          </div>
+          <div class="term-pic">
+            <img src="images/cameron-burwell.jpg" class="img-fluid" alt="Cameron Burwell">
+          </div>
         </div>
-      </article>
-      <article class="col term-emu">
-        <div class="window-header">
-          <span class="red-dot"></span>
-          <span class="yellow-dot"></span>
-          <span class="green-dot"></span>
-          <span class="center">cameron-burwell.jpg</span>
-        </div>
-        <div class="term-pic">
-          <img src="images/cameron-burwell.jpg" class="img-fluid" alt="Cameron Burwell">
-        </div>
-      </article>
-    </section>
+      </section>
 
-    <!-- about -->
-    <section id="about">
-      <h2>Meeting your personal and small business website needs</h2>
-      <div id="myCarouselCaptions" class="carousel slide carousel" data-bs-pause="hover" data-bs-ride="carousel">
-        <div class="carousel-indicators">
-          <button type="button" data-bs-target="#myCarouselCaptions" data-bs-slide-to="0" class="active"
-            aria-current="true" aria-label="Slide 1"></button>
-          <button type="button" data-bs-target="#myCarouselCaptions" data-bs-slide-to="1" aria-label="Slide 2"></button>
-          <button type="button" data-bs-target="#myCarouselCaptions" data-bs-slide-to="2" aria-label="Slide 3"></button>
-          <button type="button" data-bs-target="#myCarouselCaptions" data-bs-slide-to="3" aria-label="Slide 4"></button>
+      <!-- about -->
+      <section id="about">
+        <h2>Meeting your personal and small business website needs</h2>
+        <div id="myCarouselCaptions" class="carousel slide carousel" data-bs-pause="hover" data-bs-ride="carousel">
+          <div class="carousel-indicators">
+            <button type="button" data-bs-target="#myCarouselCaptions" data-bs-slide-to="0" class="active"
+              aria-current="true" aria-label="Slide 1"></button>
+            <button type="button" data-bs-target="#myCarouselCaptions" data-bs-slide-to="1"
+              aria-label="Slide 2"></button>
+            <button type="button" data-bs-target="#myCarouselCaptions" data-bs-slide-to="2"
+              aria-label="Slide 3"></button>
+            <button type="button" data-bs-target="#myCarouselCaptions" data-bs-slide-to="3"
+              aria-label="Slide 4"></button>
+          </div>
+          <div class="carousel-inner">
+            <div class="carousel-item active">
+              <img src="images/whisky-list.jpg" class="d-block mx-auto w-100" alt="Whisky List">
+              <div class="carousel-caption d-none d-md-block">
+                <h5>Whisky List</h5>
+                <p>A handy web app to track your favorite Whiskies</p>
+              </div>
+            </div>
+            <div class="carousel-item">
+              <img src="images/la-renaissance.jpg" class="d-block mx-auto w-100" alt="La Renaissance Jewelry">
+              <div class="carousel-caption d-none d-md-block">
+                <h5>La Renaissance Jewelry</h5>
+                <p>A redesign of La Renaissance Jewelry's website</p>
+              </div>
+            </div>
+            <div class="carousel-item">
+              <img src="images/kangaero.jpg" class="d-block mx-auto w-100" alt="Kangaero">
+              <div class="carousel-caption d-none d-md-block">
+                <h5>Kangaero</h5>
+                <p>A flashcard web app to aid in learning Japanese</p>
+              </div>
+            </div>
+            <div class="carousel-item">
+              <img src="images/cop-utils.jpg" class="d-block mx-auto w-100" alt="Cop Utils">
+              <div class="carousel-caption d-none d-md-block">
+                <h5>Cop Utils</h5>
+                <p>Quick reference tools for patrol officers</p>
+              </div>
+            </div>
+          </div>
+          <button class="carousel-control-prev" type="button" data-bs-target="#myCarouselCaptions" data-bs-slide="prev">
+            <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+            <span class="visually-hidden">Previous</span>
+          </button>
+          <button class="carousel-control-next" type="button" data-bs-target="#myCarouselCaptions" data-bs-slide="next">
+            <span class="carousel-control-next-icon" aria-hidden="true"></span>
+            <span class="visually-hidden">Next</span>
+          </button>
         </div>
-        <div class="carousel-inner">
-          <div class="carousel-item active">
-            <img src="images/whisky-list.jpg" class="d-block mx-auto w-100" alt="Whisky List">
-            <div class="carousel-caption d-none d-md-block">
-              <h5>Whisky List</h5>
-              <p>A handy web app to track your favorite Whiskies</p>
-            </div>
-          </div>
-          <div class="carousel-item">
-            <img src="images/la-renaissance.jpg" class="d-block mx-auto w-100" alt="La Renaissance Jewelry">
-            <div class="carousel-caption d-none d-md-block">
-              <h5>La Renaissance Jewelry</h5>
-              <p>A redesign of La Renaissance Jewelry's website</p>
-            </div>
-          </div>
-          <div class="carousel-item">
-            <img src="images/kangaero.jpg" class="d-block mx-auto w-100" alt="Kangaero">
-            <div class="carousel-caption d-none d-md-block">
-              <h5>Kangaero</h5>
-              <p>A flashcard web app to aid in learning Japanese</p>
-            </div>
-          </div>
-          <div class="carousel-item">
-            <img src="images/cop-utils.jpg" class="d-block mx-auto w-100" alt="Cop Utils">
-            <div class="carousel-caption d-none d-md-block">
-              <h5>Cop Utils</h5>
-              <p>Quick reference tools for patrol officers</p>
-            </div>
-          </div>
-        </div>
-        <button class="carousel-control-prev" type="button" data-bs-target="#myCarouselCaptions" data-bs-slide="prev">
-          <span class="carousel-control-prev-icon" aria-hidden="true"></span>
-          <span class="visually-hidden">Previous</span>
-        </button>
-        <button class="carousel-control-next" type="button" data-bs-target="#myCarouselCaptions" data-bs-slide="next">
-          <span class="carousel-control-next-icon" aria-hidden="true"></span>
-          <span class="visually-hidden">Next</span>
-        </button>
-      </div>
-    </section>
+      </section>
 
-    <!-- contact -->
-    <section id="contact">
-      <h2>Contact me</h2>
-      <p>I look forward to hearing from you :)</p>
-      <form id="contactForm" class="form-floating email-form" method="POST" data-netlify="true"
-        data-netlify-recaptcha="true">
-        <!-- honeypot protection -->
-        <p hidden>
-          <label>Don’t fill this out if you’re human: <input name="bot-field" /></label>
-        </p>
-        <div class="form-floating mb-3">
-          <input id="name" name="name" type="text" class="form-control" placeholder="Name">
-          <label for="floatingInput">Name</label>
+      <!-- contact -->
+      <section id="contact">
+        <h2>Contact me</h2>
+        <p>I look forward to hearing from you :)</p>
+        <form id="contactForm" class="form-floating email-form" method="POST" data-netlify="true">
+          <!-- honeypot protection -->
+          <p hidden>
+            <label>Don’t fill this out if you’re human: <input name="bot-field" /></label>
+          </p>
+          <div class="form-floating mb-3">
+            <input id="name" name="name" type="text" class="form-control" placeholder="Name">
+            <label for="floatingInput">Name</label>
+          </div>
+          <div class="form-floating mb-3">
+            <input id="email" name="email" type="email" class="form-control" placeholder="name@example.com">
+            <label for="floatingInput">Email address</label>
+          </div>
+          <div class="form-floating mb-3">
+            <input id="subject" name="subject" type="text" class="form-control" placeholder="Subject">
+            <label for="floatingInput">Subject</label>
+          </div>
+          <div class="form-floating mb-3">
+            <textarea id="message" name="message" class="form-control" placeholder="Your message"
+              style="height: 25vh"></textarea>
+            <label for="floatingTextarea2">Your message</label>
+          </div>
+          <div class="form-floating mb-3">
+            <button type="submit" class="btn btn-light btn-lg">Submit</button>
+            <button type="button" class="btn btn-light btn-lg" disabled style="visibility: hidden;"></button>
+            <button type="reset" class="btn btn-light btn-lg">Reset</button>
+          </div>
+        </form>
+        <div class="socials">
+          <a href="https://www.linkedin.com/in/cameron-burwell-13242a54/" target="_blank"><i class="bi bi-linkedin"
+              style="color: #0072B1"></i></a>
+          <a href="https://github.com/fiveohh" target="_blank"><i class="bi bi-github" style="color: white"></i></a>
+          <a href="https://www.facebook.com/cameron.burwell.94/" target="_blank"><i class="bi bi-facebook"
+              style="color: #3B5998"></i></a>
+          <a href="https://www.reddit.com/user/BLUUUEink/" target="_blank"><i class="bi bi-reddit"
+              style="color: #FF4500"></i></a>
+          <a href="https://twitter.com/bluuueink" target="_blank"><i class="bi bi-twitter"
+              style="color: #1DA1F2"></i></a>
         </div>
-        <div class="form-floating mb-3">
-          <input id="email" name="email" type="email" class="form-control" placeholder="name@example.com">
-          <label for="floatingInput">Email address</label>
-        </div>
-        <div class="form-floating mb-3">
-          <input id="subject" name="subject" type="text" class="form-control" placeholder="Subject">
-          <label for="floatingInput">Subject</label>
-        </div>
-        <div class="form-floating mb-3">
-          <textarea id="message" name="message" class="form-control" placeholder="Your message"
-            style="height: 25vh"></textarea>
-          <label for="floatingTextarea2">Your message</label>
-        </div>
-        <div class="form-floating mb-3">
-          <button type="submit" class="btn btn-light btn-lg">Submit</button>
-          <button type="button" class="btn btn-light btn-lg" disabled style="visibility: hidden;"></button>
-          <button type="reset" class="btn btn-light btn-lg">Reset</button>
-        </div>
-        <div data-netlify-recaptcha="true"></div>
-      </form>
-      <div class="socials">
-        <a href="https://www.linkedin.com/in/cameron-burwell-13242a54/" target="_blank"><i class="bi bi-linkedin"
-            style="color: #0072B1"></i></a>
-        <a href="https://github.com/fiveohh" target="_blank"><i class="bi bi-github" style="color: white"></i></a>
-        <a href="https://www.facebook.com/cameron.burwell.94/" target="_blank"><i class="bi bi-facebook"
-            style="color: #3B5998"></i></a>
-        <a href="https://www.reddit.com/user/BLUUUEink/" target="_blank"><i class="bi bi-reddit"
-            style="color: #FF4500"></i></a>
-        <a href="https://twitter.com/bluuueink" target="_blank"><i class="bi bi-twitter" style="color: #1DA1F2"></i></a>
-      </div>
-    </section>
+      </section>
+    </article>
   </main>
 </body>
 
