--- a/index.html
+++ b/index.html
@@ -74,7 +74,7 @@
         <div class="navbar-nav ms-auto">
           <div class="collapse navbar-collapse" id="navbarNav">
             <a id="homeLink" class="navbar-item nav-link" aria-current="page" href="#home">Home</a>
-            <a id="aboutLink" class="navbar-item nav-link" href="#about">About</a>
+            <a id="projectsLink" class="navbar-item nav-link" href="#projects">Projects</a>
             <a id="contactLink" class="navbar-item nav-link" href="#contact">Contact</a>
           </div>
         </div>
@@ -96,9 +96,9 @@
           </div>
           <div>
             <span class="term-text">cameron@burwell:~$ get info</span><br />
-            <span class="term-text">(Frontend | Backend | Cyber Security ) + Engineer</span><br />
-            <span class="term-text">Website + (Designer && Developer)</span><br />
-            <span class="term-text">Coffee lover</span><br />
+            <span class="term-text">(Frontend | Backend | Full Stack | Cyber Security ) + Engineer</span><br />
+            <span class="term-text">Website Designer && Web App Developer</span><br />
+            <span class="term-text">Coffee lover && Whisky aficionado</span><br />
             <span class="term-text">Music maker && Guitar player</span><br />
             <span class="term-text">Motorcycle rider</span><br />
             <span class="term-text">cameron@burwell:~$ </span><br />
@@ -106,8 +106,9 @@
             <span class="term-text">cameron@burwell:~$ </span><br />
             <span class="term-text">cameron@burwell:~$ get skills</span><br />
             <span class="term-text">Javascript && HTML && CSS</span><br />
-            <span class="term-text">Angular | React | ASP.NET | Spring</span><br />
-            <span class="term-text">C# | Java</span><br />
+            <span class="term-text">Angular</span><br />
+            <span class="term-text">Spring Framework && Spring Boot | .NET</span><br />
+            <span class="term-text">Java | C#</span><br />
             <span class="term-text">cameron@burwell:~$ open cameron-burwell.jpg &</span><br />
             <span class="term-text">cameron@burwell:~$ <span class="blink">_</span></span>
           </div>
@@ -125,8 +126,8 @@
         </div>
       </section>
 
-      <!-- about -->
-      <section id="about">
+      <!-- projects -->
+      <section id="projects">
         <h2>Meeting your personal and small business website needs</h2>
         <div id="myCarouselCaptions" class="carousel slide carousel" data-bs-pause="hover" data-bs-ride="carousel">
           <div class="carousel-indicators">
@@ -136,8 +137,8 @@
               aria-label="Slide 2"></button>
             <button type="button" data-bs-target="#myCarouselCaptions" data-bs-slide-to="2"
               aria-label="Slide 3"></button>
-            <button type="button" data-bs-target="#myCarouselCaptions" data-bs-slide-to="3"
-              aria-label="Slide 4"></button>
+            <!-- <button type="button" data-bs-target="#myCarouselCaptions" data-bs-slide-to="3"
+              aria-label="Slide 4"></button> -->
           </div>
           <div class="carousel-inner">
             <div class="carousel-item active">
@@ -161,13 +162,13 @@
                 <p>A flashcard web app to aid in learning Japanese</p>
               </div>
             </div>
-            <div class="carousel-item">
+            <!-- <div class="carousel-item">
               <img src="images/cop-utils.jpg" class="d-block mx-auto w-100" alt="Cop Utils">
               <div class="carousel-caption d-none d-md-block">
                 <h5>Cop Utils</h5>
                 <p>Quick reference tools for patrol officers</p>
               </div>
-            </div>
+            </div> -->
           </div>
           <button class="carousel-control-prev" type="button" data-bs-target="#myCarouselCaptions" data-bs-slide="prev">
             <span class="carousel-control-prev-icon" aria-hidden="true"></span>
