--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
       const sections = [...document.querySelectorAll('section')]
       const options = {
         rootMargin: '0px',
-        threshold: 0.25
+        threshold: [0.25, 0.75]
       }
 
       const callback = (entries, observer) => {
@@ -40,6 +40,11 @@
             document.getElementById(currentLink).classList.add('active');
           } else {
             document.getElementById(currentLink).classList.remove('active');
+          }
+
+          // Set hash on scroll without jumping
+          if (entry.intersectionRatio >= 0.75) {
+            history.pushState(null,null,"#" + target.id);
           }
         });
       }
