Updated github username

--- a/index.html
+++ b/index.html
@@ -221,7 +221,7 @@
         <div class="socials">
           <a href="https://www.linkedin.com/in/cameron-burwell-13242a54/" target="_blank"><i class="bi bi-linkedin"
               style="color: #0072B1"></i></a>
-          <a href="https://github.com/fiveohh" target="_blank"><i class="bi bi-github" style="color: white"></i></a>
+          <a href="https://github.com/cburwell" target="_blank"><i class="bi bi-github" style="color: white"></i></a>
           <a href="https://www.facebook.com/cameron.burwell.94/" target="_blank"><i class="bi bi-facebook"
               style="color: #3B5998"></i></a>
           <a href="https://www.reddit.com/user/BLUUUEink/" target="_blank"><i class="bi bi-reddit"
